example/lib/src/generated/errors/errors_localization_da.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Danish (`da`).
class ErrorsLocalizationDa extends ErrorsLocalization {
  ErrorsLocalizationDa([String locale = 'da']) : super(locale);

  @override
  String get error => 'Der opstod en fejl';

  @override
  String get unexpectedError => 'Der opstod en uventet fejl';

  @override
  String get bugReportSentText => 'Fejlrapport sendt succesfuldt.';
}
